--- a/exercises/exercises-ajax/package.json
+++ b/exercises/exercises-ajax/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculator-basic",
+  "name": "exercises-ajax",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,6 +9,6 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^3.0.7"
+    "vite": "^3.2.3"
   }
 }
