--- a/exercises/exercises-js/package.json
+++ b/exercises/exercises-js/package.json
@@ -1,20 +1,14 @@
 {
   "name": "exercises-js",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "snowpack dev",
-    "build": "snowpack build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bootstrap": "^5.0.2"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "snowpack": "^3.5.9"
+    "vite": "^3.2.3"
   }
 }
